--- a/package.json
+++ b/package.json
@@ -3,34 +3,20 @@
 	"version": "0.0.1",
 	"description": "",
 	"main": "index.js",
-	"scripts": {
-		"start": "ts-node src/main.ts",
-		"build:dev": "node -r esbuild-register src/main.ts",
-		"type-check": "tsc --noEmit",
-		"type-check:watch": "pnpm type-check --watch",
-		"dev": "concurrently -n server,ts \"nodemon --watch 'src/**' --ext 'ts' --exec 'pnpm build:dev'\" \"pnpm:type-check:watch\"",
-		"migration": "drizzle-kit migrate"
-	},
+	"scripts": {},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"@types/lodash.memoize": "^4.1.7",
-		"apollo-server": "^3.9.0",
 		"graphql": "^16.5.0",
-		"graphql-middleware": "^6.1.31",
-		"graphql-shield": "^7.5.0",
 		"lodash.flatten": "^4.4.0",
 		"lodash.memoize": "^4.1.2"
 	},
 	"devDependencies": {
 		"@types/lodash.flatten": "^4.4.7",
-		"concurrently": "^7.2.2",
-		"drizzle-kit": "0.9.51",
+		"@types/lodash.memoize": "^4.1.7",
 		"drizzle-orm": "0.11.5",
 		"esbuild-register": "^3.3.3",
-		"nodemon": "^2.0.18",
-		"ts-node": "^10.8.1",
 		"typescript": "^4.7.4"
 	}
 }
