--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
 	"version": "0.0.1",
 	"description": "",
 	"main": "index.js",
-	"scripts": {},
+	"scripts": {
+		"dev": "(cd examples/getting-started && npm run dev)"
+	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
